@@ -14,6 +14,7 @@ import necesse.gfx.forms.ContainerComponent;
 import necesse.gfx.forms.Form;
 import necesse.gfx.forms.components.*;
 import necesse.gfx.forms.components.containerSlot.FormContainerSlot;
+import necesse.gfx.forms.components.localComponents.FormLocalCheckBox;
 import necesse.gfx.forms.components.localComponents.FormLocalLabel;
 import necesse.gfx.forms.components.localComponents.FormLocalTextButton;
 import necesse.gfx.forms.presets.containerComponent.mob.ShopContainerForm;
@@ -50,7 +51,7 @@ public class BlacksmithContainerForm<T extends BlacksmithContainer> extends Shop
         this.breakForm.addComponent(new FormContainerSlot(client, container.RESULT_SLOT, 250, geodeSlotY));
         this.breakButton = this.breakForm.addComponent(new FormLocalTextButton("ui", "blacksmithbreakconfirm", 90, geodeSlotY + 10, 150, FormInputSize.SIZE_24, ButtonColor.BASE));
         this.breakButton.onClicked((e) -> {
-            container.breakGeodeButton.runAndSend();
+            container.breakGeodeButton.runAndSend(this.container.quickTransferToggled);
         });
         this.costLabel = this.breakForm.addComponent(new FormLocalLabel("ui", "blacksmithcost", new FontOptions(16), -1, 310, geodeSlotY - 4));
         this.preview = this.breakForm.addComponent(new FormItemPreview(300, geodeSlotY + 10, "coin"));
@@ -62,6 +63,12 @@ public class BlacksmithContainerForm<T extends BlacksmithContainer> extends Shop
             FormContentIconButton helpIcon = this.breakForm.addComponent(new FormContentIconButton(this.breakForm.getWidth() / 2 - 10, heightFlow.next(30), FormInputSize.SIZE_20, ButtonColor.BASE, Settings.UI.button_help_20, new LocalMessage("ui", "blacksmithbreakfocustip")));
             helpIcon.handleClicksIfNoEventHandlers = true;
         }
+
+        FormCheckBox checkTransferToggle = this.breakForm.addComponent(new FormLocalCheckBox("ui", "blacksmithquicktransfer", 5, heightFlow.next(20)));
+        checkTransferToggle.checked = this.container.quickTransferToggled;
+        checkTransferToggle.onClicked((e) -> {
+            this.container.setQuickTransferToggle(e.from.checked);
+        });
 
         this.breakForm.setHeight(heightFlow.next());
         this.updateBreakActive();
