@@ -53,6 +53,7 @@ blacksmithcost=Cost:
 blacksmithbreaktip=Put the geode in slot and press break to obtain various treasures!
 blacksmithbreakfocustip=Higher happiness allows you to break geodes for cheaper
 blacksmithwantbreakgeode=I want to break some geodes
+blacksmithquicktransfer=Auto transfer to inventory
 personalizedroom=Personalized Room
 nopersonalizedroom=Missing <list> in my room
 preferredfurniturewoodtype=Preferred furniture wood type
@@ -61,6 +62,7 @@ blueprintbuildconfirm=Construct Building
 blueprintwalls=Wall:
 blueprintfloor=Floor:
 blueprintfurniture=Wood:
+blueprintrecipeheader=Required Items:\n
 settlementunsafe=§6Action is not available in unsafe conditions\n§6A hostile player is currently in the settlement
 settlementenablepvp=Enable PvP
 settlementdisablepvp=Disable PvP
